RESOLVED FIXED221212
[LFC][Integration] Fix editing/execCommand/primitive-value-cleanup-minimal.htm
https://bugs.webkit.org/show_bug.cgi?id=221212
Summary [LFC][Integration] Fix editing/execCommand/primitive-value-cleanup-minimal.htm
Antti Koivisto
Reported 2021-02-01 09:01:53 PST
RenderInline height computation issue
Attachments
patch (1.51 KB, patch)
2021-02-01 09:32 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-02-01 09:32:18 PST
EWS
Comment 2 2021-02-01 11:26:43 PST
Committed r272152: <https://trac.webkit.org/changeset/272152> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418887 [details].
Radar WebKit Bug Importer
Comment 3 2021-02-01 11:27:13 PST
Note You need to log in before you can comment on or make changes to this bug.