[LFC][Integration] Fix editing/execCommand/primitive-value-cleanup-minimal.htm https://bugs.webkit.org/show_bug.cgi?id=221212

Reviewed by Zalan Bujtas.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::enclosingBorderBoxRectFor const):

To match legacy make RenderInline height return zero when there are no runs.


Canonical link: https://commits.webkit.org/233539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272152 268f45cc-cd09-0410-ab3c-d52691b4dbfc