Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp
@@ -394,6 +394,9 @@ LayoutRect LineLayout::enclosingBorderBoxRectFor(const RenderInline& renderInlin
     if (!m_inlineContent)
         return { };
 
+    if (m_inlineContent->runs.isEmpty())
+        return { };
+
     auto boxGeometry = m_inlineFormattingState.boxGeometry(m_boxTree.layoutBoxForRenderer(renderInline));
     return { Layout::BoxGeometry::borderBoxTopLeft(boxGeometry), boxGeometry.contentBox().size() };
 }
